[package]
name = "TarasNabad"
version = "0.1.0"
authors = ["fa"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocksdb = "0.15.0"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
futures = { version = "0.3.8", features = ["thread-pool"] }
tiny_http = "0.6"
url = "2.2.0"
serde_json = "1.0.61"
structopt = "0.3.21"
